Criei e finalizei a parte de conversão de bytes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="login">login</string>
 
     <string-array name="tipo">
+        <item>KB</item>
         <item>MB</item>
         <item>GB</item>
+        <item>TB</item>
     </string-array>
 </resources>
