Feito a parte de lista e começado a parte de animes.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,37 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AlgumasCoisas</string>
-    <string name="title_activity_principal">principal</string>
-    <string name="title_activity_calculoimc">calculoimc</string>
-    <string name="login">login</string>
+    <string name="lg">Entrar</string>
+    <string name="app_name">Projetinho</string>
+    <string name="title_activity_calculo_imc">CalculoIMC</string>
+    <string name="title_activity_principal">Principal</string>
+    <string name="al">Altura</string>
+    <string name="ps">Peso</string>
+    <string name="cl">Calcular</string>
+    <string name="sb">Sobre</string>
+    <string name="lp" >Limpar</string>
+    <string name="sn">Senha</string>
+    <string name="imc">IMC</string>
+    <string name="cn">Corversão</string>
+    <string name="title_activity_conversao">Conversão</string>
+    <string name="title_activity_sobre">Sobre</string>
+    <string name="cnvt">Converter para</string>
+    <string name="cnvrt">Converter</string>
+    <string-array name="spn_produto">
+        <item>NÃO COMPRADO</item>
+        <item>COMPRADO</item>
+    </string-array>
+    <string-array name="tipo">
+        <item>KB</item>
+        <item>MB</item>
+        <item>GB</item>
+        <item>TB</item>
+    </string-array>
+    <string name="title_activity_main">Projetinho</string>
+    <string name="list">Lista</string>
+    <string name="nm">Nome</string>
+    <string name="qt">Quantidade</string>
+    <string name="st">Status</string>
+    <string name="dl">Deletar</string>
+    <string name="sv">Salvar</string>
+    <string name="title_activity_lista_de_produtos">Lista De Produtos</string>
 </resources>
